            Fix internal vcbprintf JSON dumping
            nRF5x: NRF.findDevices will now throw an exception if no callback is supplied
            nRF52: Added BluetoothRemoteGATTServer.getSecurityStatus to check the status of the link
            nRF52: Disable auto-whitelisting by default, add with `NRF.setWhitelist` (fix #1187)

     1v92 : nRF5x: Fix issue where Espruino could crash during save() if the flash got into a strange state
            Added Pin.toggle() function
            Fix implicit casting to bool/number on ArrayBuffers (fix #1030)
            Fix jstExecuteTaskChecker bug, and allow jstExecuteFn to take a userdata argument
            Puck.js: Reduce IR LED to 10% duty cycle
            Puck.js: Allow Puck.IR to take pins for external IR LED (fix #927)
            nRF52: Allow arbitrary NFC data to be specified (fix #1021)
            nRF5x: Allow multiple advertising packets to be set at once with NRF.setAdvertising
            nRF52: Add 'properties' object to BluetoothRemoteGATTCharacteristic
            nRF52: Perform write without response if that is what is required 
            Pico/WiFi: Allow USB HID to work on Windows (from @nailxx)
            Allow Puck.js/nRF52 devices to drive Neopixel/WS281x/APA10x LEDs with require("neopixel").write (fix #1023)
            Fix crash in JSON.stringify for zero-length typed arrays
            Fix precedence of 'void' keyword (fix #1079)
            nRF52: Add BluetoothRemoteGATTCharacteristic.startNotifications (fix #959)
            nRF52: Added BluetoothDevice.gattserverdisconnected event
            nRF5x: Report back reason codes for BLE disconnect
            Added DataView class
            nRF52: char.readValue now returns DataView to be more Web Bluetooth compliant (fix #1091)
            nRF5x: Fix explicit disconnect being able to reboot Puck (fix #1088)
            nRF5x: Respond to conn_params update request, fix puck-puck disconnection after ~65 sec (fix #1089)