@@ -31,6 +31,7 @@
             nRF5x: NRF.findDevices will now throw an exception if no callback is supplied
             nRF52: Added BluetoothRemoteGATTServer.getSecurityStatus to check the status of the link
             nRF52: Disable auto-whitelisting by default, add with `NRF.setWhitelist` (fix #1187)
+            nRF52: Allow secure Bluetooth LE connections
 
      1v92 : nRF5x: Fix issue where Espruino could crash during save() if the flash got into a strange state
             Added Pin.toggle() function
